--- a/index.html
+++ b/index.html
@@ -1,56 +1,194 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ana Sayfa | HappyPet</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+
+    <!-- Bootstrap CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+      crossorigin="anonymous"
+    />
+
+    <title>Hello, world!</title>
     <link rel="stylesheet" href="happypet.css" />
   </head>
   <body>
-    <header style="text-align: center" class="spacing">
-      <a href="index.html" style="word-spacing: 0cm">Ana Sayfa</a>
-      <a href="about-us.html">Hakkımızda</a>
-      <a href="products.html">Ürünlerimiz</a>
-      <a href="contact.html">İletişim</a>
-      <a href="log-in.html" style="word-spacing: 0cm">Üye Girişi</a>
-    </header>
-
-    <nav>
-      <h1 style="text-align: center">HAPPYPET</h1>
+    <nav class="navbar navbar-expand-lg nnavbar-light bg-dark">
+      <a class="navbar-brand" href="#">HAPPYPET</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarText"
+        aria-controls="navbarText"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarText">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#"
+              >Ürünler <span class="sr-only">(current)</span></a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">İletişim</a>
+          </li>
+          <li class="nav-item">
+            <form class="form-inline">
+              <input
+                class="form-control mr-sm-2"
+                type="search"
+                placeholder="Aradığınız ürünü giriniz"
+                aria-label="Search"
+                style="width: 300px"
+              />
+              <button
+                class="btn btn-outline-success my-2 my-sm-0"
+                type="submit"
+              >
+                Search
+              </button>
+            </form>
+          </li>
+        </ul>
+        <span class="navbar-text" style="margin-right: 40px">
+          <a href="">Üye Girişi / Kayıt Ol</a>
+        </span>
+      </div>
     </nav>
-    <div>
-      <section class="spacing2" style="text-align: center">
-        <span style="word-spacing: 0cm"> Kedi Ürünleri</span>
-        <span style="word-spacing: 0cm"> Köpek Ürünleri</span>
-        <span style="word-spacing: 0cm"> Kuş Ürünleri</span>
-        <span style="word-spacing: 0cm"> Sürüngen Ürünleri</span>
-      </section>
-      <section class="spacing3" style="text-align: center">
-        <img
-          src="https://www.mapfre.com.tr/blog/media/2022/03/kedi-bakimi-icin-bilinmesi-gerekenler.jpeg"
-          alt="kedi-resmi"
-          width="200"
-          height="200"
-        />
-        <img
-          src="https://img-s1.onedio.com/id-637497b69fd0b9d114742eef/rev-0/w-600/h-399/f-jpg/s-6c1d93a6e1433868d13b3ec2cbe1ac23f29b321a.jpg"
-          alt="köpek-resmi"
-          width="200"
-          height="200"
-        />
-        <img
-          src="https://cf.kizlarsoruyor.com/a171710/696dc715-f1a0-4e11-84a7-0c88ef6dbb75.jpg"
-          alt="köpek-resmi"
-          width="200"
-          height="200"
-        />
-        <img
-          src="https://blog.kurumama.com/resimleri/2017/06/sakalli-ejderler.jpg"
-          alt="köpek-resmi"
-          width="200"
-          height="200"
-        />
-      </section>
+    <div class="jumbotron">
+      <h1 class="display-4" style="color: rgb(35, 35, 224)">
+        <strong>HAPPYPET</strong>
+      </h1>
+      <p class="lead"><em>~Evcil dostlarımızın alışveriş sitesi~</em></p>
+      <hr class="my-4" />
+      <p>
+        Üye olarak indirime giren ürünlerden haberdar olun ve pek çok
+        kampanyadan yararlanın!
+      </p>
+      <a class="btn btn-primary btn-lg" href="#" role="button">Kayıt Ol</a>
     </div>
+    <!-- PRODUCTS START -->
+    <div class="container mt-5">
+      <div class="row">
+        <div class="col-sm-4">
+          <div class="card text-center" style="width: 18rem">
+            <a href=""
+              ><img
+                style="width: 18rem; height: 300px"
+                src="https://www.mapfre.com.tr/blog/media/2022/03/kedi-bakimi-icin-bilinmesi-gerekenler.jpeg"
+                class="card-img-top"
+                alt="..."
+            /></a>
+            <div class="card-body">
+              <p class="card-text">KEDİ ÜRÜNLERİ</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="card text-center" style="width: 18rem">
+            <a href=""
+              ><img
+                style="width: 18rem; height: 300px"
+                src="https://blog.kurumama.com/resimleri/2017/11/en-guzel-kopek-resimleri-1.jpg"
+                class="card-img-top"
+                alt="..."
+            /></a>
+            <div class="card-body">
+              <p class="card-text">KÖPEK ÜRÜNLERİ</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="card text-center" style="width: 18rem">
+            <a href=""
+              ><img
+                style="width: 18rem; height: 300px"
+                src="https://blog.kurumama.com/resimleri/2017/06/sakalli-ejderler.jpg"
+                class="card-img-top"
+                alt="..."
+            /></a>
+            <div class="card-body">
+              <p class="card-text">SÜRÜNGEN ÜRÜNLERİ</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row mt-5">
+        <div class="col-sm-4">
+          <div class="card text-center" style="width: 18rem">
+            <a href=""
+              ><img
+                style="width: 18rem; height: 300px"
+                src="https://i.hizliresim.com/LbqLyZ.jpg"
+                class="card-img-top"
+                alt="..."
+            /></a>
+            <div class="card-body">
+              <p class="card-text">KUŞ ÜRÜNLERİ</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="card text-center" style="width: 18rem">
+            <a href=""
+              ><img
+                style="width: 18rem; height: 300px"
+                src="https://www.miyhav.com/icerik/uploads/2017/12/ginepig-ozellikleri-2.jpg"
+                class="card-img-top"
+                alt="..."
+            /></a>
+            <div class="card-body">
+              <p class="card-text">KEMİRGEN ÜRÜNLERİ</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="card text-center" style="width: 18rem">
+            <a href=""
+              ><img
+                style="width: 18rem; height: 300px"
+                src="https://blog.kurumama.com/resimleri/2017/06/akvaryum-baliklari-tutkudur-1.jpg"
+                class="card-img-top"
+                alt="..."
+            /></a>
+            <div class="card-body">
+              <p class="card-text">BALIK ÜRÜNLERİ</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- PRODUCTS END -->
+
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- Option 2: jQuery, Popper.js, and Bootstrap JS
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+    -->
   </body>
 </html>
